   Creative Commons, 559 Nathan Abbott Way, Stanford, California 94305,
   USA.  A summary of the license and the full legal text is included
   in file: COPYING.  If you wish to distribute some or all of this work
   under different terms, please contact respective author(s).
   The license applies to all entries newer than 2009-04-28.
*/

2012-12-12 14:38 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
  * hbide/environ.prg
    ! Fixed: PATH setting in .sh was using Windows specific notation.
       Thanks Jadiel for the tip.

2012-12-11 18:17 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
  * hbqt/hbmk2_qt.hb
    ! A fix for :setText() when multiline text is initiated via Qt Designer.

  + hbqtwidgets/hbqtgetlist.prg
  * hbqtwidgets/hbqtgetsys.prg
  * hbqtwidgets/hbqtwidgets.hbp
    + Separated: HbQtGetList() class in its own source.

  + hbqt/tests/validator.hbp
  + hbqt/tests/validatormain.ui
  + hbqt/tests/validatorgets.ui
  * hbqt/tests/validator.prg
    + Added: main window and window displaying GETs consumed by GET
       subsytem.

  ; All is self explanatory. Few tweaks are remaining, tomorrow.
     Guys, be ready to enter a vast world of GUI with time-tested 
     GET system.

2012-12-11 12:36 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
  * hbqtwidgets/hbqtgetsys.prg
    ! One more small fix in decimal handelling.

2012-12-11 07:05 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
  * hbqtwidgets/hbqtgetsys.prg
    ! Fixed: jump to decimal point if picture is "@E".

2012-12-10 19:11 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
  * hbqtwidgets/hbqtgetsys.prg
  * hbqtwidgets/hbqtstd.ch
    + Prepared: to be embedded with Qt Designer created .ui widgets.
       Hopefully by tomorrow a basic implementation will be in place.
       Many ideas and protocols are evolving. Idea is to have this 
       integrated with Harbour GET System isolated or/and with .ui
       widgets.

  * hbqt/tests/validator.prg