@@ -16,6 +16,11 @@
    The license applies to all entries newer than 2009-04-28.
 */
 
+2012-12-12 17:24 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
+  * hbqt/qtgui/hbqt_init.cpp
+    + Implemented: hbqt_findChild( oParent, cChildObjectName, cObjectCast )
+       hbqt_findChild( oWnd, "Catalog", "QLineEdit" ) -> oLineEdit
+
 2012-12-12 14:38 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
   * hbide/environ.prg
     ! Fixed: PATH setting in .sh was using Windows specific notation.
